--- a/Deckel-Shop/Views/Shared/_OrderDetailModal.cshtml
+++ b/Deckel-Shop/Views/Shared/_OrderDetailModal.cshtml
@@ -15,7 +15,7 @@
                         <div class="col-md-6">
                             <h3 class="d-flex justify-content-between align-items-center mb-3">
                                 Purchased products
-                                <span class="badge bg-light rounded-pill">3</span>
+                                
                             </h3>
                             <hr />
 
@@ -36,8 +36,7 @@
                                     <p class="card-text" id="personAddress">795 Folsom Ave, Suite 600 San Francisco, CA 94107</p>
                                     <span id="personPhone">Phone:</span>
                                     <br />
-                                    <br />
-                                    <a href="#" class="btn btn-primary">Change</a>
+                                    <span id="personEmail">Email:</span>
                                 </div>
                             </div>
                             <br />
