--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -261,8 +261,8 @@
 
                                 <!-- Upload image input-->
                                 <div class=" input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
-                                    <input id="upload" type="file" onchange="readURL(this);" class="form-control border-0 " disabled>
-                                    <label id="upload-label" for="upload" class="text-muted">Choose file</label>
+                                    <input id="upload1" type="file" onchange="readURL(this);" class="form-control border-0 " disabled>
+                                    <label id="upload-label1" for="upload1" class="text-muted">Choose file</label>
                                 </div>
                             </div>
 
@@ -281,14 +281,14 @@
 
                                 <!-- Upload image input-->
                                 <div class=" input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
-                                    <input id="upload2" type="file" onchange="readURL(this);" class="upload form-control border-0 " disabled>
-                                    <label id="upload-label" for="upload" class="text-muted">Choose file</label>
+                                    <input id="upload2" type="file" onchange="readURL2(this);" class="form-control border-0 " disabled>
+                                    <label id="upload-label2" for="upload" class="text-muted">Choose file</label>
                                 </div>
                             </div>
 
                             <!-- Uploaded image area-->
                             <p class="font-italic text-black-50 text-center">The image uploaded will be rendered inside the box below.</p>
-                            <div class="image-area mt-4"><img id="imageResult" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
+                            <div class="image-area mt-4"><img id="imageResult2" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
 
                         </div>
                     </div>
