--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -249,7 +249,7 @@
                     </div>
                     <div class=" form-group col-md-12 ">
                         <label for="inputPrice">Description</label>
-                        <textarea class="form-control" name="Description" value="" id="ProductDescription"></textarea>
+                        <textarea class="form-control" name="Description" value="" id="ProductDescription" disabled></textarea>
                     </div>
 
                     <div class="container py-5">
@@ -261,13 +261,12 @@
 
                                 <!-- Upload image input-->
                                 <div class=" input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
-                                    <input id="upload1" type="file" onchange="readURL(this);" class="form-control border-0 " disabled>
+                                    <input name="ImgName" value="" id="upload1" type="file" onchange="readURL(this);" class="form-control border-0 " disabled>
                                     <label id="upload-label1" for="upload1" class="text-muted">Choose file</label>
                                 </div>
                             </div>
 
                             <!-- Uploaded image area-->
-                            <p class="font-italic text-black-50 text-center">The image uploaded will be rendered inside the box below.</p>
                             <div class="image-area mt-4"><img id="imageResult" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
 
                         </div>
@@ -281,13 +280,12 @@
 
                                 <!-- Upload image input-->
                                 <div class=" input-group mb-3 px-2 py-2 rounded-pill bg-white shadow-sm">
-                                    <input id="upload2" type="file" onchange="readURL2(this);" class="form-control border-0 " disabled>
+                                    <input name="ImgName2" value="" id="upload2" type="file" onchange="readURL2(this);" class="form-control border-0 " disabled>
                                     <label id="upload-label2" for="upload" class="text-muted">Choose file</label>
                                 </div>
                             </div>
 
                             <!-- Uploaded image area-->
-                            <p class="font-italic text-black-50 text-center">The image uploaded will be rendered inside the box below.</p>
                             <div class="image-area mt-4"><img id="imageResult2" src="#" alt="" class="img-fluid rounded shadow-sm mx-auto d-block"></div>
 
                         </div>
