added message in cart view when updating qty or deleting a product from cart, added error handling: can't add a product to cart more than whats available in stock

--- a/Deckel-Shop/Views/Cart/SavedCart.cshtml
+++ b/Deckel-Shop/Views/Cart/SavedCart.cshtml
@@ -3,6 +3,16 @@
 @model Cart;
 
 @{
+    if (TempData["Msg"] != null)
+    {
+    <div style="background-color:#c4a970">
+        @TempData["msg"]
+    </div>
+    }
+}
+
+
+@{
     ViewData["Title"] = "Saved Shopping Cart";
 
     var cart = SessionHelper.Get<Cart>(Context.Session, "cart");
