--- a/Deckel-Shop/Views/Cart/Checkout.cshtml
+++ b/Deckel-Shop/Views/Cart/Checkout.cshtml
@@ -9,28 +9,29 @@
     }
 </style>
 @model Deckel_Shop.Models.CheckoutViewModel
- 
+
+
 @using (Html.BeginForm())
 
     @*<h2>Checkout</h2>*@
-<div class="row g-5">
-    <div class="col-md-5 col-lg-4 order-md-last">
-        <h4 class="d-flex justify-content-between align-items-center mb-3">
-            <span class="text-primary">Your cart</span>
-        </h4>
-        <ul class="list-group mb-3">
+    <div class="row g-5">
+        <div class="col-md-5 col-lg-4 order-md-last">
+            <h4 class="d-flex justify-content-between align-items-center mb-3">
+                <span class="text-primary">Your cart</span>
+            </h4>
+            <ul class="list-group mb-3">
 
-            @if (Model != null)
-            {
-                foreach (var item in Model.Products)
+                @if (Model != null)
                 {
-                    <li class="list-group-item d-flex justify-content-between lh-sm">
-                        <div>
-                            <h6 class="my-0">@item.Name</h6>
-                            <small class="text-muted">@item.Amount</small>
-                        </div>
-                        <span class="text-muted">@item.Price SEK</span>
-                    </li>
+                    foreach (var item in Model.Products)
+                    {
+                        <li class="list-group-item d-flex justify-content-between lh-sm">
+                            <div>
+                                <h6 class="my-0">@item.Name</h6>
+                                <small class="text-muted">@item.Amount</small>
+                            </div>
+                            <span class="text-muted">@item.Price SEK</span>
+                        </li>
                     }
                 }
                 else
@@ -39,147 +40,148 @@
                 }
 
 
-            <li class="list-group-item d-flex justify-content-between bg-light"></li>
-            <li class="list-group-item d-flex justify-content-between">
-                <span>Total (SEK)</span>
-                <strong>@Model.TotalPrice SEK</strong>
-            </li>
-        </ul>
+                <li class="list-group-item d-flex justify-content-between bg-light"></li>
+                <li class="list-group-item d-flex justify-content-between">
+                    <span>Total (SEK)</span>
+                    <strong>@Model.TotalPrice SEK</strong>
+                </li>
+            </ul>
 
-    </div>
-    <div class="col-md-7 col-lg-8">
-        <h4 class="mb-3">Billing address</h4>
-        <form asp-action="AddOrder" class="form-horizontal">
-            <div class="row g-3">
-                <div class="col-sm-6">
-                    <label class="control-label">First Name</label>
-                    <input asp-for="@Model.Customer.FirstName" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.FirstName" class="text-danger"></span>
+        </div>
+        <div class="col-md-7 col-lg-8">
+            <h4 class="mb-3">Billing address</h4>
+            <form asp-action="AddOrder" class="form-horizontal" id="CheckoutForm">
+                <div class="row g-3">
+                    <div class="col-sm-6">
+                        <label class="control-label">First Name</label>
+                        <input asp-for="@Model.Customer.FirstName" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.FirstName" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-sm-6">
+                        <label class="control-label">Last Name</label>
+                        <input asp-for="@Model.Customer.LastName" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.LastName" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-12">
+                        <label class="control-label">Email</label>
+                        <input asp-for="@Model.Customer.Email" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.Email" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-12">
+                        <label class="control-label">Street</label>
+                        <input asp-for="@Model.Customer.Street" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.Street" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-md-5">
+                        <label class="control-label">Phone number</label>
+                        <input asp-for="@Model.Customer.Phone" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.Phone" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-md-4">
+                        <label class="control-label">City</label>
+                        <input asp-for="@Model.Customer.City" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.City" class="text-danger"></span>
+                    </div>
+
+                    <div class="col-md-3">
+                        <label class="control-label">Zip Code</label>
+                        <input asp-for="@Model.Customer.ZipCode" class="form-control" />
+                        <span asp-validation-for="@Model.Customer.ZipCode" class="text-danger"></span>
+                    </div>
                 </div>
 
-                <div class="col-sm-6">
-                    <label class="control-label">Last Name</label>
-                    <input asp-for="@Model.Customer.LastName" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.LastName" class="text-danger"></span>
-                </div>
+                <hr class="my-4">
 
-                <div class="col-12">
-                    <label class="control-label">Email</label>
-                    <input asp-for="@Model.Customer.Email" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.Email" class="text-danger"></span>
-                </div>
-
-                <div class="col-12">
-                    <label class="control-label">Street</label>
-                    <input asp-for="@Model.Customer.Street" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.Street" class="text-danger"></span>
-                </div>
-
-                <div class="col-md-5">
-                    <label class="control-label">Phone number</label>
-                    <input asp-for="@Model.Customer.Phone" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.Phone" class="text-danger"></span>
-                </div>
-
-                <div class="col-md-4">
-                    <label class="control-label">City</label>
-                    <input asp-for="@Model.Customer.City" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.City" class="text-danger"></span>
-                </div>
-
-                <div class="col-md-3">
-                    <label class="control-label">Zip Code</label>
-                    <input asp-for="@Model.Customer.ZipCode" class="form-control" />
-                    <span asp-validation-for="@Model.Customer.ZipCode" class="text-danger"></span>
-                </div>
-            </div>
-
-            <hr class="my-4">
-
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="same-address">
-                <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
-            </div>
-
-            <div class="form-check">
-                <input type="checkbox" class="form-check-input" id="save-info">
-                <label class="form-check-label" for="save-info">Save this information for next time</label>
-            </div>
-
-            <hr class="my-4">
-
-            <h4 class="mb-3">Payment</h4>
-
-            <div class="my-3">
                 <div class="form-check">
-                    <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
-                    <label class="form-check-label" for="credit">Credit card</label>
+                    <input type="checkbox" class="form-check-input" id="same-address">
+                    <label class="form-check-label" for="same-address">Shipping address is the same as my billing address</label>
                 </div>
+
                 <div class="form-check">
-                    <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
-                    <label class="form-check-label" for="debit">Debit card</label>
+                    <input type="checkbox" class="form-check-input" id="save-info">
+                    <label class="form-check-label" for="save-info">Save this information for next time</label>
                 </div>
-                <div class="form-check">
-                    <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
-                    <label class="form-check-label" for="paypal">PayPal</label>
-                </div>
-            </div>
 
-            <div class="row gy-3">
-                <div class="col-md-6">
-                    <label for="cc-name" class="form-label">Name on card</label>
-                    <input type="text" class="form-control" id="cc-name" placeholder="" required>
-                    <small class="text-muted">Full name as displayed on card</small>
-                    <div class="invalid-feedback">
-                        Name on card is required
+                <hr class="my-4">
+
+                <h4 class="mb-3">Payment</h4>
+
+                <div class="my-3">
+                    <div class="form-check">
+                        <input id="credit" name="paymentMethod" type="radio" class="form-check-input" checked required>
+                        <label class="form-check-label" for="credit">Credit card</label>
+                    </div>
+                    <div class="form-check">
+                        <input id="debit" name="paymentMethod" type="radio" class="form-check-input" required>
+                        <label class="form-check-label" for="debit">Debit card</label>
+                    </div>
+                    <div class="form-check">
+                        <input id="paypal" name="paymentMethod" type="radio" class="form-check-input" required>
+                        <label class="form-check-label" for="paypal">PayPal</label>
                     </div>
                 </div>
 
-                <div class="col-md-6">
-                    <label for="cc-number" class="form-label">Credit card number</label>
-                    <input type="text" class="form-control" id="cc-number" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Credit card number is required
+                <div class="row gy-3">
+                    <div class="col-md-6">
+                        <label for="cc-name" class="form-label">Name on card</label>
+                        <input type="text" class="form-control" id="cc-name" placeholder="" required>
+                        <small class="text-muted">Full name as displayed on card</small>
+                        <div class="invalid-feedback">
+                            Name on card is required
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <label for="cc-number" class="form-label">Credit card number</label>
+                        <input type="text" class="form-control" id="cc-number" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Credit card number is required
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <label for="cc-expiration" class="form-label">Expiration</label>
+                        <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Expiration date required
+                        </div>
+                    </div>
+
+                    <div class="col-md-3">
+                        <label for="cc-cvv" class="form-label">CVV</label>
+                        <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
+                        <div class="invalid-feedback">
+                            Security code required
+                        </div>
                     </div>
                 </div>
 
-                <div class="col-md-3">
-                    <label for="cc-expiration" class="form-label">Expiration</label>
-                    <input type="text" class="form-control" id="cc-expiration" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Expiration date required
-                    </div>
-                </div>
+                <hr class="my-4">
+                @if (Model.Products.Count == 0)
+                {
+                    <button id="CheckoutBtn" class="w-100 btn btn-primary btn-lg" type="submit" value="Submit" disabled>Checkout</button>
+                }
+                else
+                {
+                    <button id="CheckoutBtn" class="w-100 btn btn-primary btn-lg" type="submit" value="Submit">Checkout</button>
+                }
+                <div class="form-group">
 
-                <div class="col-md-3">
-                    <label for="cc-cvv" class="form-label">CVV</label>
-                    <input type="text" class="form-control" id="cc-cvv" placeholder="" required>
-                    <div class="invalid-feedback">
-                        Security code required
-                    </div>
                 </div>
-            </div>
-
-            <hr class="my-4">
-            @if (Model.Products.Count == 0)
-            {
-                <button class="w-100 btn btn-primary btn-lg" type="submit" value="Submit" disabled>Checkout</button>
-            }
-            else
-            {
-                <button class="w-100 btn btn-primary btn-lg" type="submit" value="Submit">Checkout</button>
-            }
-            <div class="form-group">
-                
-            </div>
-        </form>
-        @{
-            if (TempData["Msg"] != null)
-            {
-                <script>
+            </form>
+            @{
+                if (TempData["Msg"] != null)
+                {
+                    <script>
                     alert('@TempData["msg"]')
-                </script>
+                    </script>
+                }
             }
-        }
+        </div>
     </div>
-</div>
+<script src="~/js/Checkout.js"></script>
