--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -49,7 +49,7 @@
             </div>
         </div>
     </div>
-    
+
 </div>
 
 @*line break*@
@@ -78,32 +78,32 @@
             <tbody class="tableSearch">
                 @foreach (var item in Model)
                 {
-                <tr>
-                    <th scope="row" id="OrderIdRow-@item.OrderId">@Html.DisplayFor(modelItem => item.OrderId)</th>
+                    <tr>
+                        <th scope="row" id="OrderIdRow-@item.OrderId">@Html.DisplayFor(modelItem => item.OrderId)</th>
 
-                    <td>@Html.DisplayFor(modelItem => item.OrderDate) </td>
-                    <td>@Html.DisplayFor(modelItem => item.Customer.FirstName)</td>
-                    <td>@Html.DisplayFor(modelItem => item.OrderTotal) SEK</td>
-                    <td>
-                        <span data-toggle="tooltip" data-placement="bottom" title="info">
-                            <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
-                                <i class="fas fa-info-circle"></i>
-                            </button>
-                        </span>
+                        <td>@Html.DisplayFor(modelItem => item.OrderDate) </td>
+                        <td>@Html.DisplayFor(modelItem => item.Customer.FirstName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.OrderTotal) SEK</td>
+                        <td>
+                            <span data-toggle="tooltip" data-placement="bottom" title="info">
+                                <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-light" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                    <i class="fas fa-info-circle"></i>
+                                </button>
+                            </span>
 
-                        <span data-toggle="tooltip" data-placement="bottom" title="delete">
-                            <button onclick="RemoveOrder(@item.OrderId)" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
-                                <i class="far fa-trash-alt"></i>
-                            </button>
-                        </span>
+                            <span data-toggle="tooltip" data-placement="bottom" title="delete">
+                                <button onclick="RemoveOrder(@item.OrderId)" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-deleteOrder" style="background-color:transparent">
+                                    <i class="far fa-trash-alt"></i>
+                                </button>
+                            </span>
 
-                        <span  data-toggle="tooltip" data-placement="bottom" title="deliver">
-                            <button type="button" onclick="SendOrder(@item.OrderId)" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-sendOrder" style="background-color:transparent">
-                                <i class="fas fa-truck-loading"></i>
-                            </button>
-                        </span>
-                    </td>
-                </tr>
+                            <span data-toggle="tooltip" data-placement="bottom" title="deliver">
+                                <button type="button" onclick="SendOrder(@item.OrderId)" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModal-sendOrder" style="background-color:transparent">
+                                    <i class="fas fa-truck-loading"></i>
+                                </button>
+                            </span>
+                        </td>
+                    </tr>
                 }
             </tbody>
         </table>
@@ -141,13 +141,13 @@
             <div class="modal-body">
                 Order successfully sent
             </div>
-                <div class="modal-footer">
-                    <form asp-action="SendOrder">
+            <div class="modal-footer">
+                <form asp-action="SendOrder">
 
-                       <button name="id" id="SendOrderBtn" value="" class="btn btn-primary" >OK</button>
+                    <button name="id" id="SendOrderBtn" value="" class="btn btn-primary">OK</button>
 
-                    </form>
-                </div>
+                </form>
+            </div>
         </div>
     </div>
 </div>
@@ -155,3 +155,4 @@
 @using Microsoft.AspNetCore.Identity
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
+    <script src="~/js/Admin.js"></script>
