Added signalr script to all admin pages

--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerOrderHistory.cshtml
@@ -2,6 +2,9 @@
 @{
     ViewData["Title"] = "Customer#01 Order History";
 }
+
+<script src="~/js/Admin.js"></script>
+
 <div class="row">
     <h1>Customers' order history</h1>
 </div>
