--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -4,6 +4,9 @@
 @{
 }
 @model IEnumerable<Database.Models.Order>
+
+    <script src="~/js/Admin.js"></script>
+
 @*nav bar*@
 <ul class="nav nav-tabs nav-tabs">
     <li class="nav-item">
@@ -126,4 +129,3 @@
         </div>
     </div>
 </div>
-
