--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Customers";
 }
 
+<script src="~/js/Admin.js"></script>
+
 <ul class="nav nav-tabs nav-tabs">
     <li class="nav-item">
         <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
