--- a/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
@@ -9,6 +9,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
+    <script src="~/js/Admin.js"></script>
 
 <ul class="nav nav-tabs nav-tabs">
     <li class="nav-item">
