--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -22,7 +22,7 @@
             <div class="col-md-4">
                 <h3>
                     Andreas Linné
-                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="https://www.layoutit.com/img/sports-q-c-140-140-3.jpg" />
+                </h3><img class="img-thumbnail" alt="Bootstrap Image Preview" src="~/Image/Andreas.jpg" />
                 <dl>
                     <dt>Founder & CEO/Mad genius</dt>
                 </dl>
