renamed button on stock view

--- a/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Stock.cshtml
@@ -34,7 +34,7 @@
             <div class="d-flex">
                 <div class="dropdown mr-1">
                     <button type="button" class="btn btn-primary dropdown-toggle" id="dropdownMenuOffset" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-offset="10,20">
-                        Status
+                        Status/Sort
                     </button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
                         <form asp-action="Stock">
