session'll be cleared after placed order

--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -76,7 +76,7 @@
                     <th scope="col">CUSTOMER NAME</th>
                     <th scope="col">Order Status</th>
                     <th scope="col">ORDER TOTAL</th>
-                    @*<th scope="col"></th>*@
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody class="tableSearch">
