--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -74,7 +74,7 @@
                     <th scope="col">CUSTOMER NAME</th>
                     <th scope="col">Order Status</th>
                     <th scope="col">ORDER TOTAL</th>
-                    @*<th scope="col"></th>*@
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody class="tableSearch">
@@ -82,9 +82,9 @@
                 {
                     <tr>
                         <th scope="row" id="OrderIdRow-@item.OrderId">@Html.DisplayFor(modelItem => item.OrderId)</th>
-
                         <td>@Html.DisplayFor(modelItem => item.OrderDate) </td>
-                        <td>@Html.DisplayFor(modelItem => item.Customer.FirstName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.Customer.FirstName) @Html.DisplayFor(modelItem => item.Customer.LastName)</td>
+                        <td>@Html.DisplayFor(modelItem => item.OrderStatus)</td>
                         <td>@Html.DisplayFor(modelItem => item.OrderTotal) SEK</td>
                         <td>
                             <span data-toggle="tooltip" data-placement="bottom" title="info">
