Fixed small typo

--- a/Deckel-Shop/Views/Home/About.cshtml
+++ b/Deckel-Shop/Views/Home/About.cshtml
@@ -8,7 +8,7 @@
                 <h3>
                     About us
                 </h3>
-                <p>A little bit about ourselfs and our story/vision for the future</p>
+                <p>A little bit about ourselves and our story/vision for the future</p>
             </div>
         </div>
     </div>
