renamed "delivered order" to "completed order" in admin view, added color

--- a/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Users.cshtml
@@ -16,7 +16,7 @@
         <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" asp-action="DeliveredOrders">Delivered Orders</a>
+        <a class="nav-link" asp-action="DeliveredOrders">Completed Orders</a>
     </li>
     <li class="nav-item ">
         <a class="nav-link" asp-action="Admin_customerList">Customer List</a>
