--- a/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Admin_customerList.cshtml
@@ -11,7 +11,7 @@
         <a class="nav-link" asp- asp-action="Administrator">Pending Orders</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" asp-action="DeliveredOrders">Delivered Orders</a>
+        <a class="nav-link" asp-action="DeliveredOrders">Completed Orders</a>
     </li>
     <li class="nav-item ">
         <a class="nav-link active" asp-action="Admin_customerList">Customer List</a>
