--- a/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/DeliveredOrders.cshtml
@@ -44,9 +44,11 @@
                     Status
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                    <a class="dropdown-item" value="1" href="#">Invoiced</a>
-                    <a class="dropdown-item" value="2" href="#">Delivered</a>
-                    <a class="dropdown-item" value="3" href="#">Cancelled</a>
+                    <form asp-action="DeliveredOrders">
+                        <button name="filter" class="dropdown-item" value="delivered">Delivered</button>
+                        <button name="filter" class="dropdown-item" value="cancelled">Cancelled</button>
+
+                    </form>
                 </div>
             </div>
         </div>
@@ -84,22 +86,40 @@
                 {
                     @foreach (var item in Model)
                     {
-                        <tr>
-                            <th scope="row">@Html.DisplayFor(modelItem => item.OrderId)</th>
+                <tr>
+                    <th scope="row">@Html.DisplayFor(modelItem => item.OrderId)</th>
 
-                            <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
-                            <td>@Html.DisplayFor(modelItem => item.ShippingDate)</td>
-                            <td>@Html.DisplayFor(modelItem => item.Customer.FirstName) @Html.DisplayFor(modelItem => item.Customer.LastName)</td>
-                            <td>@Html.DisplayFor(modelItem => item.OrderStatus)</td>
-                            <td>@Html.DisplayFor(modelItem => item.OrderTotal)</td>
-                            <td>
-                                <span data-toggle="tooltip" data-placement="bottom" title="info">
-                                    <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
-                                        <i class="fas fa-info-circle"></i>
-                                    </button>
-                                </span>
-                            </td>
-                        </tr>
+                    <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
+                    <td>@Html.DisplayFor(modelItem => item.ShippingDate)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Customer.FirstName) @Html.DisplayFor(modelItem => item.Customer.LastName)</td>
+                    @if (item.OrderStatus == "Delivered")
+                    {
+                        <td style="color:forestgreen">
+                            @item.OrderStatus
+                        </td>
+                    }
+                    else if (item.OrderStatus == "Cancelled")
+                    {
+                        <td style="color:red">
+                            @item.OrderStatus
+                        </td>
+                    }
+                    else
+                    {
+                        <td>
+                            @item.OrderStatus
+                        </td>
+                    }
+                    @*<td>@Html.DisplayFor(modelItem => item.OrderStatus)</td>*@
+                    <td>@Html.DisplayFor(modelItem => item.OrderTotal)</td>
+                    <td>
+                        <span data-toggle="tooltip" data-placement="bottom" title="info">
+                            <button type="button" onclick="GetModalInfo(@item.OrderId, 'orderDetails')" id="infoModalBtn-@item.OrderId" class="btn btn-ligh" data-toggle="modal" data-target="#exampleModalCenter" style="background-color:transparent">
+                                <i class="fas fa-info-circle"></i>
+                            </button>
+                        </span>
+                    </td>
+                </tr>
                     }
                 }
 
