--- a/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
+++ b/Deckel-Shop/Views/Profile/Administrator/Index.cshtml
@@ -13,7 +13,7 @@
         <a class="nav-link active" asp- asp-action="Administrator">Pending Orders</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" asp-action="DeliveredOrders">Delivered Orders</a>
+        <a class="nav-link" asp-action="DeliveredOrders">Completed Orders</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" asp-action="Admin_customerList">Customer List</a>
